package com.sep490.ecoverse_be.enums;

public enum RewardType {
    PHYSICAL,
    DIGITAL,
    VOUCHER
}
